--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ dependencies {
 
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'    //okhttp日志拦截器
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'        //Retrofit
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'        //gson转换器
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2' // 必要依赖，和Rxjava结合必须用到，下面会提到
+    implementation 'com.squareup.retrofit2:retrofit:2.8.0'        //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'        //gson转换器
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.0' // 必要依赖，和Rxjava结合必须用到，下面会提到
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'            //android线程调度
 
     //implementation 'androidx.recyclerview:recyclerview:1.1.0'						//（Recyclerview）
@@ -67,4 +67,8 @@ dependencies {
 
     //EventBus 消息总线
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+    //Fresco依赖
+    implementation 'com.facebook.fresco:fresco:2.1.0'
+
 }
