--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="维度影院"
@@ -15,15 +16,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".view.activity.BranchActivity"></activity>
         <activity android:name=".view.activity.GuidePageActivity" />
-        <activity android:name=".view.activity.StartPageActivity" />
-        <activity android:name=".view.activity.RegisterActivity" />
-        <activity android:name=".view.activity.LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.activity.StartPageActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".view.activity.RegisterActivity" />
+        <activity android:name=".view.activity.LoginActivity" />
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
